force-app/main/default/objects/Student__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <formula>CONTAINS(&quot;İstanbul:Ankara:İzmir&quot;, TEXT (City__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula</label>
    <type>Checkbox</type>
</CustomField>