force-app/main/default/objects/Student__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>TEXT(Gender__c)  &amp; &apos;, &apos; &amp; First_Name__c   &amp;  &apos; &apos; &amp;    Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>