force-app/main/default/objects/Student__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kayıt Aşamasında</fullName>
            </value>
            <value>
                <fullName>Devam Ediyor</fullName>
            </value>
            <value>
                <fullName>Kayıt Donduruldu</fullName>
            </value>
            <value>
                <fullName>Mezun</fullName>
            </value>
            <value>
                <fullName>Iptal</fullName>
                <label>Kayıt İptal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>