force-app/main/default/objects/Student__c/recordTypes/Corporate_Student.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Student</fullName>
    <active>true</active>
    <label>Corporate Student</label>
</RecordType>