force-app/main/default/objects/Student__c/validationRules/isCorporateAccountFilledParentEmpt.validationRule-meta.xml
<ValidationRule>
    <fullName>isCorporateAccountFilledParentEmpt</fullName>
    <active>true</active>
    <errorConditionFormula>/* 4.	Student isActive fieldi işaretli ise status, email ve phone fieldleri dolu olmalıdır.*/


 IF(isActive__c ,    
    OR( ISBLANK(  TEXT(Status__c)), 
        ISBLANK (Email__c),
        ISBLANK (Phone__c)
      ),ISBLANK(  TEXT(Status__c))
   )</errorConditionFormula>
    <errorDisplayField>isActive__c</errorDisplayField>
    <errorMessage>Student isActive fieldi işaretli ise status, email ve phone fieldleri dolu olmalıdır.</errorMessage>
</ValidationRule>