force-app/main/default/objects/Student__c/listViews/Corporate_Students.listView-meta.xml
<ListView>
    <fullName>Corporate_Students</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>isCorporate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isCorporate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Corporate Students</label>
</ListView>